FIx linter error for values yaml.

--- a/helm/charts/patroni/values.yaml
+++ b/helm/charts/patroni/values.yaml
@@ -16,7 +16,7 @@ imagePullSecrets: []
 nameOverride: ~
 fullnameOverride: ~
 
-credentials: {}
+credentials:
   # # Username of replication account
   # replicationUsername: replication
   # # Username of superuser account
