--- a/helm/charts/patroni/templates/rolebinding.yaml
+++ b/helm/charts/patroni/templates/rolebinding.yaml
@@ -1,13 +1,14 @@
----
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "patroni.fullname" . }}
+  name: {{ template "patroni.fullname" . }}
   labels: {{ include "patroni.labels" . | nindent 4 }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ template "patroni.serviceAccountName" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "patroni.fullname" . }}
-subjects:
-  - kind: ServiceAccount
-    name: {{ include "patroni.fullname" . }}
+  name: {{ template "patroni.fullname" . }}
+{{- end }}
