--- a/helm/charts/patroni/templates/secret.yaml
+++ b/helm/charts/patroni/templates/secret.yaml
@@ -1,29 +1,24 @@
-{{- $replicationPassword := (randAlphaNum 32) | b64enc }}
-{{- $superuserPassword := (randAlphaNum 32) | b64enc }}
-{{- $appDbPassword := (randAlphaNum 32) | b64enc }}
-
-{{- if not .Values.secretOverride }}
-
 {{- $secretName := print (include "patroni.fullname" .) }}
 {{- $secret := (lookup "v1" "Secret" .Release.Namespace $secretName ) }}
-{{- if not $secret }}
----
+
+{{- if not .Values.credentials.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
-  annotations:
-    "helm.sh/resource-policy": keep
   name: {{ $secretName }}
   labels: {{ include "patroni.labels" . | nindent 4 }}
 type: Opaque
 data:
-  replication-username: {{ default "replication" .Values.credentials.replicationUsername | b64enc }}
-  replication-password: {{ $replicationPassword }}
-  superuser-username: {{ default "postgres" .Values.credentials.superuserUsername | b64enc }}
-  superuser-password: {{ $superuserPassword }}
-  app-db-name: {{ default "app" .Values.credentials.appDbName | b64enc }}
-  app-db-username: {{ default "app" .Values.credentials.appDbUserame | b64enc }}
-  app-db-password: {{ $appDbPassword }}
-
-{{- end }}
+  username-superuser: {{ .Values.credentials.superuser.username | b64enc }}
+  username-admin: {{ .Values.credentials.admin.username | b64enc }}
+  username-standby: {{ .Values.credentials.standby.username | b64enc }}
+  {{- if $secret }}
+  password-superuser: {{ index $secret.data "password-superuser" }}
+  password-admin: {{ index $secret.data "password-admin" }}
+  password-standby: {{ index $secret.data "password-standby" }}
+  {{- else }}
+  password-superuser: {{ .Values.credentials.superuser.password | default (randAlphaNum 32) | b64enc }}
+  password-admin: {{ .Values.credentials.admin.password | default (randAlphaNum 32) | b64enc }}
+  password-standby: {{ .Values.credentials.standby.password | default (randAlphaNum 32) | b64enc }}
+  {{- end }}
 {{- end }}
