--- a/helm/charts/patroni/templates/serviceaccount.yaml
+++ b/helm/charts/patroni/templates/serviceaccount.yaml
@@ -1,12 +1,10 @@
-{{- if .Values.serviceAccount.create -}}
----
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "patroni.serviceAccountName" . }}
+  name: {{ template "patroni.serviceAccountName" . }}
   labels: {{ include "patroni.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
+  {{- if .Values.serviceAccount.annotations }}
+  affinity: {{ .Values.affinity | toYaml | nindent 4 }}
   {{- end }}
 {{- end }}
