--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -10,6 +10,12 @@ dependencies:
   - name: nginx-server
     version: 1.0.0
     repository: file://./charts/nginx-server
-  - name: patroni
-    version: 1.6.1
-    repository: file://./charts/patroni
+  # - name: patroni
+  #   version: 1.6.1
+  #   repository: file://./charts/patroni
+  - name: crunchy-postgres
+    version: 0.5.0
+    repository: https://bcgov.github.io/crunchy-postgres/
+  - name: crunchy-postgres-tools
+    version: 0.3.0
+    repository: https://bcgov.github.io/crunchy-postgres/
