--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -13,9 +13,9 @@ dependencies:
   # - name: patroni
   #   version: 1.6.1
   #   repository: file://./charts/patroni
-  - name: crunchy-postgres
-    version: 0.5.0
-    repository: https://bcgov.github.io/crunchy-postgres/
-  - name: crunchy-postgres-tools
-    version: 0.3.0
-    repository: https://bcgov.github.io/crunchy-postgres/
+  # - name: crunchy-postgres
+  #   version: 0.5.0
+  #   repository: https://bcgov.github.io/crunchy-postgres/
+  # - name: crunchy-postgres-tools
+  #   version: 0.3.0
+  #   repository: https://bcgov.github.io/crunchy-postgres/
