--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -88,9 +88,15 @@ spec:
             - name: MEDIAWIKI_DB_HOST
               value: {{ .Values.mediawiki.database.host | default (printf "%s-mysql" (include "isd-wiki.fullname" .)) | quote }} # Adjust for other DBs
             - name: MEDIAWIKI_DB_NAME
-              value: {{ .Values.mediawiki.database.name | quote }}
+              valueFrom:
+                secretKeyRef:
+                  name: patroni-{{ include "isd-wiki.fullname" . }}
+                  key: app-db-name
             - name: MEDIAWIKI_DB_USER
-              value: {{ .Values.mediawiki.database.user | quote }}
+              valueFrom:
+                secretKeyRef:
+                  name: patroni-{{ include "isd-wiki.fullname" . }}
+                  key: app-db-username
             - name: MEDIAWIKI_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
