--- a/helm/templates/pvc-html.yaml
+++ b/helm/templates/pvc-html.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "isd-wiki.labels" . | nindent 4 }}
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
