--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -6,16 +6,16 @@ appVersion: "1.39.3"
 type: application
 icon: https://upload.wikimedia.org/wikipedia/commons/d/dd/MediaWiki-2020-logo.svg
 
-dependencies:
-  - name: nginx-server
-    version: 1.0.0
-    repository: file://./charts/nginx-server
-  # - name: patroni
-  #   version: 1.6.1
-  #   repository: file://./charts/patroni
-  # - name: crunchy-postgres
-  #   version: 0.5.0
-  #   repository: https://bcgov.github.io/crunchy-postgres/
-  # - name: crunchy-postgres-tools
-  #   version: 0.3.0
-  #   repository: https://bcgov.github.io/crunchy-postgres/
+# dependencies:
+#   - name: nginx-server
+#     version: 1.0.0
+#     repository: file://./charts/nginx-server
+#   # - name: patroni
+#   #   version: 1.6.1
+#   #   repository: file://./charts/patroni
+#   # - name: crunchy-postgres
+#   #   version: 0.5.0
+#   #   repository: https://bcgov.github.io/crunchy-postgres/
+#   # - name: crunchy-postgres-tools
+#   #   version: 0.3.0
+#   #   repository: https://bcgov.github.io/crunchy-postgres/
