--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -54,7 +54,7 @@ spec:
          args:
           # The official MediaWiki image has the files in /var/www/html.
           # We copy them from that location into a different, temporary mount point for the volume.
-          - "cp -a --no-preserve=ownership,mode /var/www/html/. /copy-dest/"
+          - "cp -r /var/www/html/. /copy-dest/"
           # - "cp -r --preserve=mode /var/www/html/. /copy-dest/"
          volumeMounts:
           - name: mediawiki-html
