--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -17,14 +17,14 @@ spec:
         # 1. Vault injector configuration
         vault.hashicorp.com/agent-inject: 'true'
         # set to 'true' if you are going to connect and query vault from your application
-        vault.hashicorp.com/agent-inject-token: 'false' 
+        vault.hashicorp.com/agent-inject-token: 'false'
         # this makes sure the secret vault will only change during pod restart
-        vault.hashicorp.com/agent-pre-populate-only: 'true' 
+        vault.hashicorp.com/agent-pre-populate-only: 'true'
         # Must match cluster. Use one of: k8s-silver, k8s-gold, k8s-golddr, k8s-emerald
-        vault.hashicorp.com/auth-path: auth/k8s-{{ .Values.global.cluster }}  
+        vault.hashicorp.com/auth-path: auth/k8s-{{ .Values.global.cluster }}
         vault.hashicorp.com/namespace: platform-services
         # licenseplate-nonprod or licenseplate-prod are your options
-        vault.hashicorp.com/role: {{ .Values.global.vault.role }} 
+        vault.hashicorp.com/role: {{ .Values.global.vault.role }}
         # - The value is the path in Vault where the secret is located.
         vault.hashicorp.com/agent-inject-secret-isd-db-user: {{ .Values.global.licenseplate }}-{{ .Values.global.vault.engine }}/{{ .Values.global.vault.secret }}
         # - The template Vault Agent should use for rendering a secret:
@@ -58,36 +58,51 @@ spec:
          volumeMounts:
           - name: mediawiki-html
             mountPath: /copy-dest
+
       containers:
-        - name: nginx
-          image: "nginx:stable-alpine"
-          imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
-          volumeMounts:
-            # The NGINX server will read the PHP files from this shared volume
-            - name: mediawiki-html
-              mountPath: /var/www/html
-            # Mount a ConfigMap for the NGINX configuration
-            - name: nginx-config
-              mountPath: /etc/nginx/nginx.conf
-              subPath: nginx.conf
-          # Configure NGINX to listen on port 80 and forward PHP requests to the PHP-FPM container
-          env:
+       - name: nginx
+         securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+         image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag | default .Chart.AppVersion }}"
+         imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
+         ports:
+          - name: http
+            containerPort: {{ .Values.nginx.service.ports.http }}
+            protocol: TCP
+          - name: https
+            containerPort: {{ .Values.nginx.service.ports.https }}
+            protocol: TCP
+         resources:
+          {{- toYaml .Values.resources | nindent 12 }}
+         volumeMounts:
+          - name: empty-dir
+            mountPath: /tmp
+            subPath: tmp-dir
+          - name: nginx-run
+            mountPath: /var/run
+          - name: nginx-config
+            mountPath: /etc/nginx/conf.d/default.conf
+            subPath: nginx.conf
+          # - name: certificate
+          #   mountPath: /certs
+          - name: nginx-cache
+            mountPath: /var/cache/nginx
+          # The NGINX server will read the PHP files from this shared volume
+          - name: mediawiki-html
+            mountPath: /var/www/html
+            readOnly: true
+         env:
             - name: PHP_FPM_HOST
               value: localhost
             - name: PHP_FPM_PORT
               value: "9000"
-          # Readiness and Liveness probes for the NGINX container
-          readinessProbe:
+         readinessProbe:
             httpGet:
               path: /
               port: 80
             initialDelaySeconds: 10
             periodSeconds: 5
-          livenessProbe:
+         livenessProbe:
             httpGet:
               path: /
               port: 80
@@ -95,23 +110,18 @@ spec:
             periodSeconds: 10
 
         # The main MediaWiki PHP-FPM container
-        - name: mediawiki
-          securityContext:
-            {{- toYaml .Values.mediawiki.securityContext | nindent 16 }}
-          image: "{{ .Values.mediawiki.image.repository }}:{{ .Values.mediawiki.image.tag }}"
-          imagePullPolicy: {{ .Values.mediawiki.image.pullPolicy }}
-          ports:
-            - name: fpm
-              containerPort: 9000
-              protocol: TCP
-            - name: http
-              containerPort: 80
-              protocol: TCP
-          command: ["/bin/sh", "-c", "sleep infinity"]
-          # # Use custom entrypoint script here. It will now run on the shared volume.
-          # command: ["sh"]
-          # args: ["./docker-entrypoint.sh"]
-          env:
+       - name: mediawiki
+         securityContext:
+           {{- toYaml .Values.mediawiki.securityContext | nindent 16 }}
+         image: "{{ .Values.mediawiki.image.repository }}:{{ .Values.mediawiki.image.tag }}"
+         imagePullPolicy: {{ .Values.mediawiki.image.pullPolicy }}
+         ports:
+          - name: fpm
+            containerPort: 9000
+            protocol: TCP
+         command: ["sh"]
+         args: ["/var/www/html/docker-entrypoint.sh"]
+         env:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
             - name: MEDIAWIKI_DB_HOST
@@ -135,7 +145,7 @@ spec:
               value: {{ .Values.mediawiki.siteName | quote }}
             # Add more environment variables for MediaWiki configuration as needed
             # (e.g., for upload directory, extensions, etc.)
-          volumeMounts:
+         volumeMounts:
             # Mount the shared volume for both PHP and NGINX
             - name: mediawiki-html
               mountPath: /var/www/html
@@ -144,21 +154,39 @@ spec:
             - name: mediawiki-config
               mountPath: /var/www/html/LocalSettings.php
               subPath: LocalSettings.php
-          resources:
+         resources:
             {{- toYaml .Values.mediawiki.resources | nindent 16 }}
-          # Readiness and Liveness probes for the PHP-FPM container
-          readinessProbe:
+         readinessProbe:
             tcpSocket:
               port: 9000
             initialDelaySeconds: 10
             periodSeconds: 5
-          livenessProbe:
+         livenessProbe:
             tcpSocket:
               port: 9000
             initialDelaySeconds: 30
             periodSeconds: 10
-            
+
       volumes:
+        - name: empty-dir
+          emptyDir: {}
+        - name: nginx-run
+          emptyDir: {}
+        # - name: certificate
+        #   secret:
+        #     secretName: proxy-nginx-tls
+        #     items:
+        #       - key: tls.crt
+        #         path: server.crt
+        #       - key: tls.key
+        #         path: server.key
+        #     defaultMode: 420
+        - name: nginx-config
+          configMap:
+            name: {{ include "isd-wiki.fullname" . }}-nginx-config
+            # defaultMode: 0644
+        - name: nginx-cache
+          emptyDir: {}
         - name: mediawiki-data
           persistentVolumeClaim:
             claimName: {{ include "isd-wiki.fullname" . }}-data
@@ -168,9 +196,6 @@ spec:
         - name: mediawiki-config
           configMap:
             name: {{ include "isd-wiki.fullname" . }}-config
-        - name: nginx-config
-          configMap:
-            name: {{ include "isd-wiki.fullname" . }}-nginx-config
       {{- with .Values.mediawiki.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
